# customer_services

./: .gitignore  Cargo.toml  build.rs
config/: .env
proto/: customer.proto
src/: main.rs
src/core/: config.rs  environment.rs  postgres_config.rs
src/customer/: handler.rs  mod.rs  uow.rs
src/customer/json/: customer.rs  mod.rs  table.rs
src/customer/repo/: fake_repo.rs  mod.rs  postgres_repo.rs  repo.rs
src/customer/services/: mod.rs
src/utils/: alias.rs  mod.rs  tools.rs
